[gd_scene load_steps=38 format=3 uid="uid://u2so53vo6ln8"]

[ext_resource type="Script" uid="uid://c85so6g0r5tia" path="res://scripts/UI/FishCollection.gd" id="1_vadpx"]
[ext_resource type="PackedScene" uid="uid://dvudi6kooo44u" path="res://objects/UI/FishEntry.tscn" id="2_87y58"]
[ext_resource type="Texture2D" uid="uid://d0vhrkrd8i2uf" path="res://sprites/UI/kenney_ui-pack-adventure/Spritesheet/spritesheet-default.png" id="2_l2ux7"]
[ext_resource type="Texture2D" uid="uid://lkseiwb1yb1a" path="res://sprites/UI/kenney_ui-pack-adventure/Spritesheet/spritesheet-double.png" id="3_m8178"]
[ext_resource type="Script" uid="uid://dhmlk70qy0eib" path="res://scripts/UI/Components/CategoryBtn.gd" id="3_opvk5"]
[ext_resource type="Resource" uid="uid://b5wtl8mej3vkw" path="res://scripts/Resources/Categories/Fishes.tres" id="4_bdkwx"]
[ext_resource type="Theme" uid="uid://c10x1hpnodnbi" path="res://themes/Main_theme.tres" id="5_epbqp"]
[ext_resource type="Resource" uid="uid://cccm3f18x2on5" path="res://scripts/Resources/Categories/Nature.tres" id="5_xbkqn"]
[ext_resource type="Resource" uid="uid://eqi3uvm17to0" path="res://scripts/Resources/Categories/Insects.tres" id="6_8mn7x"]
[ext_resource type="Resource" uid="uid://catedw4i7v6px" path="res://scripts/Resources/Categories/Animals.tres" id="7_il0o0"]
[ext_resource type="Resource" uid="uid://dsaa6q3411ycd" path="res://scripts/Resources/Categories/Secrets.tres" id="8_ae5mx"]
[ext_resource type="PackedScene" uid="uid://dgw7oq2r0wcu6" path="res://objects/UI/btn_region_filter.tscn" id="11_8ho8q"]
[ext_resource type="Texture2D" uid="uid://cue0akjttcjio" path="res://sprites/UI/kenney_ui-pack/PNG/Grey/Double/button_rectangle_depth_gradient.png" id="11_qtxvw"]
[ext_resource type="Texture2D" uid="uid://ch74gsei43q3c" path="res://sprites/UI/region buttons/btn_beach.png" id="12_paqtd"]
[ext_resource type="Texture2D" uid="uid://v3hvpj7sfflg" path="res://sprites/UI/region buttons/btn_coast.png" id="13_3ide2"]
[ext_resource type="Script" uid="uid://bj6hqw6pe0bcf" path="res://scripts/Resources/RegionRes.gd" id="13_5u538"]
[ext_resource type="Texture2D" uid="uid://0cy4sodedyhp" path="res://sprites/UI/region buttons/btn_deep.png" id="14_cv542"]
[ext_resource type="Resource" uid="uid://bwrdv60ecb3rv" path="res://scripts/Resources/Regions/Beach.tres" id="14_qyc4h"]
[ext_resource type="Texture2D" uid="uid://dnxf7ypexw6jf" path="res://sprites/UI/region buttons/btn_river.png" id="15_cut8s"]
[ext_resource type="Resource" uid="uid://dhld2ow8uhn80" path="res://scripts/Resources/Regions/BeachGround.tres" id="15_sw881"]
[ext_resource type="Texture2D" uid="uid://b5fv3m2p33rrh" path="res://sprites/UI/region buttons/btn_swamp.png" id="16_tl1np"]
[ext_resource type="Texture2D" uid="uid://8m47wnchas8n" path="res://sprites/UI/region buttons/btn_reef.png" id="17_7r40o"]
[ext_resource type="Resource" uid="uid://dwijteaf2p6at" path="res://scripts/Resources/Regions/Coast.tres" id="17_kbfr8"]
[ext_resource type="Resource" uid="uid://b16jgklq2bpkk" path="res://scripts/Resources/Regions/Deep.tres" id="19_snwiw"]
[ext_resource type="Resource" uid="uid://dlp3f2lo6klif" path="res://scripts/Resources/Regions/Shark.tres" id="20_5gxxt"]
[ext_resource type="Resource" uid="uid://dtv2pu6qgth1j" path="res://scripts/Resources/Regions/River.tres" id="25_qo3sl"]
[ext_resource type="Resource" uid="uid://5hdu1q8j5531" path="res://scripts/Resources/Regions/Swamp.tres" id="26_ynkoj"]
[ext_resource type="Resource" uid="uid://dve05j53bog0x" path="res://scripts/Resources/Regions/SwampGround.tres" id="27_66vjw"]
[ext_resource type="Resource" uid="uid://dkhuqkephtd2b" path="res://scripts/Resources/Regions/Reef.tres" id="27_dd0ud"]
[ext_resource type="Resource" uid="uid://fwr3ntued7gc" path="res://scripts/Resources/Regions/ReefGround.tres" id="28_n05r7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5c7k5"]
atlas = ExtResource("2_l2ux7")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oweff"]
atlas = ExtResource("3_m8178")
region = Rect2(0, 0, 512, 128)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wedsj"]
content_margin_left = 32.0
content_margin_right = 32.0

[sub_resource type="AtlasTexture" id="AtlasTexture_wr7vg"]
atlas = ExtResource("3_m8178")
region = Rect2(1120, 944, 32, 128)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tgc8n"]
texture = SubResource("AtlasTexture_wr7vg")
texture_margin_left = 20.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0
expand_margin_left = 32.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3fej6"]
bg_color = Color(0, 0, 0, 0.521569)
expand_margin_left = 32.0

[sub_resource type="Theme" id="Theme_2ayyg"]
ScrollContainer/styles/panel = SubResource("StyleBoxEmpty_wedsj")
VScrollBar/styles/grabber = SubResource("StyleBoxTexture_tgc8n")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxTexture_tgc8n")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxTexture_tgc8n")
VScrollBar/styles/scroll = SubResource("StyleBoxFlat_3fej6")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxFlat_3fej6")

[node name="FishCollection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("5_epbqp")
script = ExtResource("1_vadpx")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="MarginContainer2" type="MarginContainer" parent="HSplitContainer"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 150

[node name="Categories" type="VBoxContainer" parent="HSplitContainer/MarginContainer2"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_constants/separation = 40

[node name="BtnFishes" type="Button" parent="HSplitContainer/MarginContainer2/Categories"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
action_mode = 0
script = ExtResource("3_opvk5")
category = ExtResource("4_bdkwx")

[node name="CenterContainer" type="CenterContainer" parent="HSplitContainer/MarginContainer2/Categories/BtnFishes"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HSplitContainer/MarginContainer2/Categories/BtnFishes/CenterContainer"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("5_epbqp")
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "MENU_ENCYCLOPEDIA_FISHES_TAB"
fit_content = true
autowrap_mode = 0

[node name="BtnNature" type="Button" parent="HSplitContainer/MarginContainer2/Categories"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_vertical = 0
action_mode = 0
script = ExtResource("3_opvk5")
category = ExtResource("5_xbkqn")

[node name="CenterContainer" type="CenterContainer" parent="HSplitContainer/MarginContainer2/Categories/BtnNature"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HSplitContainer/MarginContainer2/Categories/BtnNature/CenterContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "MENU_ENCYCLOPEDIA_NATURE_TAB"
fit_content = true
autowrap_mode = 0

[node name="BtnInsect" type="Button" parent="HSplitContainer/MarginContainer2/Categories"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_vertical = 0
action_mode = 0
script = ExtResource("3_opvk5")
category = ExtResource("6_8mn7x")

[node name="CenterContainer" type="CenterContainer" parent="HSplitContainer/MarginContainer2/Categories/BtnInsect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HSplitContainer/MarginContainer2/Categories/BtnInsect/CenterContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "MENU_ENCYCLOPEDIA_INSECTS_TAB"
fit_content = true
autowrap_mode = 0

[node name="BtnAnimal" type="Button" parent="HSplitContainer/MarginContainer2/Categories"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_vertical = 0
action_mode = 0
script = ExtResource("3_opvk5")
category = ExtResource("7_il0o0")

[node name="CenterContainer" type="CenterContainer" parent="HSplitContainer/MarginContainer2/Categories/BtnAnimal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HSplitContainer/MarginContainer2/Categories/BtnAnimal/CenterContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "MENU_ENCYCLOPEDIA_ANIMALS_TAB"
fit_content = true
autowrap_mode = 0

[node name="BtnSecret" type="Button" parent="HSplitContainer/MarginContainer2/Categories"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_vertical = 0
action_mode = 0
script = ExtResource("3_opvk5")
category = ExtResource("8_ae5mx")

[node name="CenterContainer" type="CenterContainer" parent="HSplitContainer/MarginContainer2/Categories/BtnSecret"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HSplitContainer/MarginContainer2/Categories/BtnSecret/CenterContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "???"
fit_content = true
autowrap_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 50

[node name="NinePatchRect" type="NinePatchRect" parent="HSplitContainer/MarginContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_5c7k5")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="RemainingFishesLabel" type="RichTextLabel" parent="HSplitContainer/MarginContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -97.0
offset_bottom = 42.0
grow_horizontal = 0
bbcode_enabled = true
text = "10/200"
fit_content = true
autowrap_mode = 0

[node name="VSplitContainer" type="VSplitContainer" parent="HSplitContainer/MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="HSplitContainer/MarginContainer/VSplitContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HSplitContainer/MarginContainer/VSplitContainer/CenterContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
texture = SubResource("AtlasTexture_oweff")
stretch_mode = 4

[node name="Label" type="RichTextLabel" parent="HSplitContainer/MarginContainer/VSplitContainer/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 52
bbcode_enabled = true
text = "MENU_TITLE_ENCYCLOPEDIA"
fit_content = true
autowrap_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/MarginContainer/VSplitContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/MarginContainer/VSplitContainer/MarginContainer"]
layout_mode = 2

[node name="FlowContainer" type="FlowContainer" parent="HSplitContainer/MarginContainer/VSplitContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 10
alignment = 1
vertical = true

[node name="BtnAllFilter" parent="HSplitContainer/MarginContainer/VSplitContainer/MarginContainer/VBoxContainer/FlowContainer" instance=ExtResource("11_8ho8q")]
layout_mode = 2
texture = ExtResource("11_qtxvw")

[node name="BtnBeachFilter" parent="HSplitContainer/MarginContainer/VSplitContainer/MarginContainer/VBoxContainer/FlowContainer" instance=ExtResource("11_8ho8q")]
layout_mode = 2
regions = Array[ExtResource("13_5u538")]([ExtResource("14_qyc4h"), ExtResource("15_sw881")])
texture = ExtResource("12_paqtd")

[node name="BtnCoastFilter" parent="HSplitContainer/MarginContainer/VSplitContainer/MarginContainer/VBoxContainer/FlowContainer" instance=ExtResource("11_8ho8q")]
layout_mode = 2
regions = Array[ExtResource("13_5u538")]([ExtResource("17_kbfr8")])
texture = ExtResource("13_3ide2")
default_text = ""

[node name="BtnDeepFilter" parent="HSplitContainer/MarginContainer/VSplitContainer/MarginContainer/VBoxContainer/FlowContainer" instance=ExtResource("11_8ho8q")]
layout_mode = 2
regions = Array[ExtResource("13_5u538")]([ExtResource("19_snwiw"), ExtResource("20_5gxxt")])
texture = ExtResource("14_cv542")
text_color = Color(1, 1, 1, 1)
default_text = ""

[node name="BtnRiverFilter" parent="HSplitContainer/MarginContainer/VSplitContainer/MarginContainer/VBoxContainer/FlowContainer" instance=ExtResource("11_8ho8q")]
layout_mode = 2
regions = Array[ExtResource("13_5u538")]([ExtResource("25_qo3sl")])
texture = ExtResource("15_cut8s")
default_text = ""

[node name="BtnSwampFilter" parent="HSplitContainer/MarginContainer/VSplitContainer/MarginContainer/VBoxContainer/FlowContainer" instance=ExtResource("11_8ho8q")]
layout_mode = 2
regions = Array[ExtResource("13_5u538")]([ExtResource("26_ynkoj"), ExtResource("27_66vjw")])
texture = ExtResource("16_tl1np")
text_color = Color(1, 1, 1, 1)
default_text = ""

[node name="BtnReefFilter" parent="HSplitContainer/MarginContainer/VSplitContainer/MarginContainer/VBoxContainer/FlowContainer" instance=ExtResource("11_8ho8q")]
layout_mode = 2
regions = Array[ExtResource("13_5u538")]([ExtResource("27_dd0ud"), ExtResource("28_n05r7")])
texture = ExtResource("17_7r40o")
text_color = Color(1, 1, 1, 1)
default_text = ""

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/MarginContainer/VSplitContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 600)
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_2ayyg")
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/MarginContainer/VSplitContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FishEntry" parent="HSplitContainer/MarginContainer/VSplitContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_87y58")]
layout_mode = 2

[node name="FishEntry2" parent="HSplitContainer/MarginContainer/VSplitContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_87y58")]
layout_mode = 2

[node name="FishEntry3" parent="HSplitContainer/MarginContainer/VSplitContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_87y58")]
layout_mode = 2

[node name="FishEntry4" parent="HSplitContainer/MarginContainer/VSplitContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_87y58")]
layout_mode = 2

[connection signal="pressed" from="HSplitContainer/MarginContainer2/Categories/BtnFishes" to="." method="_on_btn_fishes_pressed"]
[connection signal="pressed" from="HSplitContainer/MarginContainer2/Categories/BtnNature" to="." method="_on_btn_nature_pressed"]
[connection signal="pressed" from="HSplitContainer/MarginContainer2/Categories/BtnInsect" to="." method="_on_btn_insect_pressed"]
[connection signal="pressed" from="HSplitContainer/MarginContainer2/Categories/BtnAnimal" to="." method="_on_btn_animal_pressed"]
[connection signal="pressed" from="HSplitContainer/MarginContainer2/Categories/BtnSecret" to="." method="_on_btn_secret_pressed"]
